--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex§ \n"
  01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Sea of Hadu's marshes § \n"
+ 01_MUU_puppet:0 "§yAny minor communist country in Mu will join the Union as a puppet§ \n"
  
  marsh_infantry:0 "Detachable Floaters"
  marsh_motorized:0 "Watertight Seals"
@@ -58,7 +59,7 @@
  MUU_persecute_democratic_desc:1 "'These buffons claim to represent the people? How can they possibly claim any righteousness or piety? The Ujjamun is appointed by the gods to speak for the people! - Hudujjam Azbutim of House Dimadamaq"
  MUU_new_elite:1 "A New Elite"
  MUU_new_elite_desc:1 "'Our previous lords were in good graces with the Ujjamun, and for very good reason - they counseled him in wisdom. We must once again elevate the scions of the Great Houses and the Lords to assist and support the Ujjamun.' - Suqurad Hagumarda of House Juderit"
- MUU_national_holidays:1 "Celebrating National Holidays"
+ MUU_national_holidays:1 "National Holidays"
  MUU_national_holidays_desc:1 "'Our people toil gloriously but endlessly; why should they not celebrate the holy days? Did the gods not command us to observe those sacred days? We we not given days for merriment and enjoyment? The Muror are a blessed people and we should celebrate this!' - Anaderuq Hullamru of House Jashunat"
  MUU_one_people:1 "One Muror People"
  MUU_one_people_desc:1 "'The Muror are one people. The years of division and dissention must be brought to an end! We are one people! No other nation, no other people, are as glorious or as blessed as we Muror! We must bring back the rebellious groups now!' - Unturq Dhizhmit of House Navgollu"
@@ -152,117 +153,131 @@
  MUU_unified_empire_desc:1 "The time is right for a declaration of the renewal of the Great Empire of Mu! Glory to Mu and the Muror!"
  
  MUU_connect_countryside:1 "Connect with the Countryside"
- MUU_connect_countryside_desc:1 ""
+ MUU_connect_countryside_desc:1 "There is a great divide between the urban and rural populations. We should start integrating those outside the Marshes."
  MUU_rural_infrastructure:1 "Hadu-Omarka Railroad"
- MUU_rural_infrastructure_desc:1 ""
- MUU_rural_manpower:1 ">>>>>Extend Military Recruitment"
- MUU_rural_manpower_desc:1 ""
+ MUU_rural_infrastructure_desc:1 "Before any serious project begins in the isolated rural lands, we need to connect them to the coastal cities. Now we begin the construction of a great railroad that goes from the Omarka Mountain Range to the Hadu Sea!"
+ MUU_rural_manpower:1 "Rural Military Training Fields"
+ MUU_rural_manpower_desc:1 "Now that the countryside is in full connection with the central government we can start recruiting military personnel from those regions."
  MUU_no_talk:1 "No Talk with Communists"
- MUU_no_talk_desc:1 ""
+ MUU_no_talk_desc:1 "There is no way we can find a middle ground with such an extreme ideology like communism. We must make sure these militias never gain a foothold in our government."
  MUU_yes_talk:1 "Compromise with the Militias"
- MUU_yes_talk_desc:1 ""
+ MUU_yes_talk_desc:1 "At this point we can't simply ignore their influence. There is no reasonable way to get rid of them by force. We should compromise with them to preserve peace in our land."
  MUU_exterminate_communists:1 "Exterminate the Reds!"
- MUU_exterminate_communists_desc:1 ""
+ MUU_exterminate_communists_desc:1 "Their very existence is a threat to the continuity of the Muror people. We must bury this vile ideology along with the monsters that support it!"
  MUU_suppress_communists:1 "Suppress the Militias"
- MUU_suppress_communists_desc:1 ""
+ MUU_suppress_communists_desc:1 "Incarceration, punishments, humiliation. We must do everything to make sure nobody in his sane mind will ever entertain the idea of joining a revolutionary militia."
  MUU_incorporate_communists:1 "Incorporate and Support Moderates"
- MUU_incorporate_communists_desc:1 ""
+ MUU_incorporate_communists_desc:1 "We can't let them take over the government, but we can make them feel like they're doing it. By allowing the most moderate of them to enter the political game, we can allow the situation to de escalate."
  MUU_embrace_communists:1 "Support the Revolution!"
- MUU_embrace_communists_desc:1 ""
+ MUU_embrace_communists_desc:1 "They are right. We can't let the people be oppressed by the old customs and social order. We must take it all down!"
  MUU_survey_militias:1 "Survey the Hot Spots"
- MUU_survey_militias_desc:1 ""
+ MUU_survey_militias_desc:1 "Before we can attack the cells, we first have to find them. A few soldiers dressed as commoners can infiltrate these militias and relay intel for our central command."
  MUU_strike_cells:1 "Strike the Communist Cells"
- MUU_strike_cells_desc:1 ""
+ MUU_strike_cells_desc:1 "The time is now! We know their locations and leaders. Now we can strike their heart!"
  MUU_destroy_militia:1 "Destroy the Militias"
- MUU_destroy_militia_desc:1 ""
+ MUU_destroy_militia_desc:1 "There are still disorganized militias around. We must destroy what's left of them!"
  MUU_limit_influence:1 "Limit their Influence"
- MUU_limit_influence_desc:1 ""
+ MUU_limit_influence_desc:1 "Even though some in the government have leftist leanings, we must be sure they won't pass a single law without our consent."
  MUU_bribe_politicians:1 "Bribe the Politicians"
- MUU_bribe_politicians_desc:1 ""
+ MUU_bribe_politicians_desc:1 "Popular politicians can pretend they're fighting for social change, but with a little bit of money we can make sure this stays only in their public speeches."
  MUU_deradicalize_youth:1 "Deradicalize the Youth"
- MUU_deradicalize_youth_desc:1 ""
+ MUU_deradicalize_youth_desc:1 "The young are the future of our country. If we guarantee they won't stray away from the traditional social order, we safeguard the future of Mu."
  MUU_absorb_militias:1 "Absorb the Militias"
- MUU_absorb_militias_desc:1 ""
+ MUU_absorb_militias_desc:1 "Now that we have taken their side, we can incorporate these militias in our army and end this guerrilla once and for all."
  MUU_expand_influence:1 "Expand the Influence"
- MUU_expand_influence_desc:1 ""
+ MUU_expand_influence_desc:1 "We must ensure that our ideals aren't restricted to a few isolated groups. Mass propaganda throughout our country should solve this."
  MUU_control_cities:1 "Establish Presence on the Old Cities"
- MUU_control_cities_desc:1 ""
+ MUU_control_cities_desc:1 "The Old Cities in the Marshes are the bulwark of traditionalism and backwardness. If we take over the universities and schools, soon we will have the entire country on our hands."
  MUU_rural_schools:1 "Rural Schools"
- MUU_rural_schools_desc:1 ""
+ MUU_rural_schools_desc:1 "The rural population has little to no formal education. We must solve this if we ever entertain the idea of being a scientific powerhouse."
  MUU_military_reforms:1 "Military Reforms"
- MUU_military_reforms_desc:1 ""
+ MUU_military_reforms_desc:1 "For millenia we have been subject to wanton aggression from outsiders. If we want this to end, we must reform our Armed Forces to a Western standard."
  MUU_infantry_equip:1 "Modernized Rifles"
- MUU_infantry_equip_desc:1 ""
+ MUU_infantry_equip_desc:1 "Our rifles were made with low cost of production in mind. Although cheap, they aren't reliable and are prone to failures. This must be changed."
  MUU_artillery_equip:1 "Fire Support"
- MUU_artillery_equip_desc:1 ""
+ MUU_artillery_equip_desc:1 "Our soldiers know full well the value of a good artillery barrage. They have to be supplied with modern field howitzers for that."
  MUU_doctrine_research1:1 "Adaptive Tactics"
- MUU_doctrine_research1_desc:1 ""
+ MUU_doctrine_research1_desc:1 "Our soldiers are as good as the commanders that give them orders. If we want to have a powerful army we need to adapt our tactics to the unique environment we live in."
  MUU_motorized_equip:1 "Mobile Warfare"
- MUU_motorized_equip_desc:1 ""
+ MUU_motorized_equip_desc:1 "A country as big as ours needs a mobile army to answer to the ever shifting combat environment of the modern war."
  MUU_tank_equip:1 "Heavy Armor"
- MUU_tank_equip_desc:1 ""
+ MUU_tank_equip_desc:1 "Breaking through a fortified line can be a suicidal decision. We need armored vehicles to open the way for our army to advance."
  MUU_special_forces:1 "Namumaz Qul"
- MUU_special_forces_desc:1 ""
+ MUU_special_forces_desc:1 "Namumaz Qul, the Grave of the Invaders. The same Marshes that feed and shelter us are the ones where our invaders have been consumed throughout the centuries. We need troops that can navigate throught this nightmarish landscape with no difficulty."
  MUU_infantry_marsh:1 "Detachable Floaters"
- MUU_infantry_marsh_desc:1 ""
+ MUU_infantry_marsh_desc:1 "The infantry bags and artillery cannons will be equiped with inflatable detachable floaters to facilitate the movement in the flooded wetlands that spread throughout most of our lands."
  MUU_motorized_marsh:1 "Watertight Seals"
- MUU_motorized_marsh_desc:1 ""
+ MUU_motorized_marsh_desc:1 "The motorized vehicles can be retrofitted with watertight seals that will help them move through shallow water without flooding the engine compartment."
  MUU_tank_marsh:1 "River Fording"
- MUU_tank_marsh_desc:1 ""
+ MUU_tank_marsh_desc:1 "There is no way we can make a non-amphibious tank float. Instead we can fit snorkels for the engine and use waterproof bearings for the moving parts so that they can traverse submerged through shallow waters"
  MUU_dd_focus:1 "Protect the Trade"
- MUU_dd_focus_desc:1 ""
+ MUU_dd_focus_desc:1 "The same thin canal that allows us to defend our homeland against naval invasions with ease also makes our convoys extremely vulnerable against submarine attacks. We need destroyers to escort our trade ships."
  MUU_cl_focus:1 "Coastal Guard"
- MUU_cl_focus_desc:1 ""
+ MUU_cl_focus_desc:1 "Destroyers are good for hunting submarines, but we need more than that to deal with enemy ships."
  MUU_sub_focus:1 "Sink the Invaders"
- MUU_sub_focus_desc:1 ""
+ MUU_sub_focus_desc:1 "If any of their ships end up entering the Hadu Sea, our submarines will make short work of them."
  MUU_ca_focus:1 "Heavy Ships"
- MUU_ca_focus_desc:1 ""
+ MUU_ca_focus_desc:1 "Armored ships are the latest design in our fleet. They will lead the fleet wherever it's called."
  MUU_bb_focus:1 "The Pride of the Fleet"
- MUU_bb_focus_desc:1 ""
+ MUU_bb_focus_desc:1 "Battleships and battlecruisers are floating fortresses that inspire fear in both enemy ships and the unfortunate troops that happen to be defending a beach. They are the pride of the Muror Navy."
  MUU_cv_focus:1 "Floating Airfields"
- MUU_cv_focus_desc:1 ""
+ MUU_cv_focus_desc:1 "The age of the Battleship is over. With the correct modifications, our airplanes can land in ships, allowing our air power to be projected farther than we ever imagined."
  MUU_light_fighter:1 "Homeland Defense"
- MUU_light_fighter_desc:1 ""
+ MUU_light_fighter_desc:1 "Even though our Marshes protect us against invading armies, they won't do any good against enemy aircraft. We need up-to-date light fighters to secure our airspace."
  MUU_cas:1 "Ground Pounding"
- MUU_cas_desc:1 ""
+ MUU_cas_desc:1 "Our dive bombers can strike fear in anyone who dares invade our homeland!"
  MUU_nav_bomber:1 "Defense of Hadu"
- MUU_nav_bomber_desc:1 ""
+ MUU_nav_bomber_desc:1 "The only thing scarier than finding a few combat ships in the sea is looking above the horizon and seeing hundreds of torpedo armed light bombers heading your way. This will safeguard our coasts more than anything in the sea."
  MUU_heavy_fighter:1 "Escort Fighters"
- MUU_heavy_fighter_desc:1 ""
+ MUU_heavy_fighter_desc:1 "Heavy bombers need escort for their long distance operations. We must sacrifice agility in exchange for operational range if we want to protect our heavier aircraft."
  MUU_tac_bomber:1 "Long-Range Support"
- MUU_tac_bomber_desc:1 ""
+ MUU_tac_bomber_desc:1 "Nimble enough to allow for precise ground bombing and naval strikes, large enough to carry a respectable ordnance loadout and have a continental range. The most versatile of our airplanes must be modernized to maintain an edge over the enemy forces."
  MUU_strat_bomber:1 "Aparuqur Ijuaz"
- MUU_strat_bomber_desc:1 ""
+ MUU_strat_bomber_desc:1 "The Fist of the Sky. An airplane so large that only a few can destroy an entire industrial zone. Our enemies will shake in fear when they know what happens to the ones who face us!"
  MUU_experimental_airfield:1 "The Inirliq Research Airbase"
- MUU_experimental_airfield_desc:1 ""
+ MUU_experimental_airfield_desc:1 "Our research can go as far as our facilities can accomodate. To develop better airplanes, we need a far away military base to serve as a testing ground."
  MUU_expand_airfield:1 "Expand the Operations"
- MUU_expand_airfield_desc:1 ""
+ MUU_expand_airfield_desc:1 "Now we can build an entire aeronautical engineering research base in this airfield. This should be worth the cost."
  MUU_jet_research:1 "Jet Propulsion Research"
- MUU_jet_research_desc:1 ""
+ MUU_jet_research_desc:1 "A compressor, a burner and a turbine, the jet engine uses the same air that feeds its engine to propel the airplane faster than any piston engine we ever designed."
+ 
+ 
+ ###ideas
  
  
  MUU_rural_isolation:0 "Rural Population Isolated"
  MUU_rural_guerrillas:0 "Rural Communist Guerrillas"
  MUU_government_purges_happening:0 "Government Purges Happening"
  MUU_extended_conscription:0 "Extended Conscription"
+ MUU_purge_fascists1:0 "Purging Fascists"
  MUU_civic_education_idea:0 "Civic Education"
  MUU_ministry_of_defense:0 "Ministry of Defense"
  MUU_ministry_of_development:0 "Ministry of Development"
  MUU_persecuting_democrats:0 "Persecuting Democrats"
+ MUU_national_holidays1:0 "Celebrating National Holidays"
  MUU_mil_1:0 "A Loyal Army"
  MUU_mil_2:0 "Unbreakable Spirit"
  MUU_restored_empire:0 "Restored Empire"
+ MUU_westernization1:0 "Westernizing"
  MUU_extend_voting_rights:0 "Extended Voting Rights"
- MUU_volunteers:0 "Help the Class Struggle Abroad"
+ MUU_economic_reforms1:0 "Economic Reforms"
+ MUU_volunteers:0 "Helping the Class Struggle Abroad"
  MUU_state_above_all:0 "State Above All"
  MUU_fascist_mobilization:0 "Mobilization of the Economy"
  MUU_existential_war:0 "An Existential War"
+ MUU_develop_poor1:0 "Developing the Poor Districts"
+ MUU_land_reclamation1:0 "Draining the Marshes"
+ MUU_reform_religion1:0 "Reforming the Old Religion"
+ MUU_persecute_religion1:0 "Persecuting Religious Leaders"
+ MUU_fascist_conscription1:0 "Compulsory Military Service"
+ MUU_no_talk1:0 "Anti-Communist Worker Culture"
+ MUU_yes_talk1:0 "Friendly Syndicates"
  MUU_exterminate_commies:0 "Exterminating the Communists"
  MUU_suppress_commies:0 "Suppressing the Socialist Leadership"
- MUU_integrate_commies:0 "Integrating the Left Wing"
  MUU_embrace_commies:0 "Embracing the Revolution"
  MUU_bribing_politicians:0 "Bribing Politicians"
  MUU_control_cities:0 "Cities Under Control"
  MUU_special_forces:0 "The Grave of the Invaders"
  MUU_inirliq_airfield1:0 "Inirliq Research Airbase"
  MUU_inirliq_airfield2:0 "Inirliq Research Airbase"
+ MUU_building_inirliq:0 "Construction in Inirliq"
