--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -371,12 +371,12 @@
  HOU_democratic_ADJ:0 "Houpo'ean"
  HOU_neutrality_ADJ:0 "Houpo'ean"
  HOU_communism_ADJ:0 "Houpo'ean"
- MUU_fascism:0 "Mu"
- MUU_fascism_DEF:0 "Mu"
- MUU_democratic:0 "Mu"
- MUU_democratic_DEF:0 "Mu"
+ MUU_fascism:0 "Greater Empire of Mu"
+ MUU_fascism_DEF:0 "Muror"
+ MUU_democratic:0 "Federal Republic of Mu"
+ MUU_democratic_DEF:0 "Muror"
  MUU_neutrality:0 "Mu"
- MUU_neutrality_DEF:0 "Mu"
+ MUU_neutrality_DEF:0 "Muror"
  MUU_communism:0 "People's Federation of Mu"
  MUU_communism_DEF:0 "People's Federation of Mu"
  MUU_fascism_ADJ:0 "Muror"
