--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -266,7 +266,7 @@
  MUU_fascist_mobilization:0 "Mobilization of the Economy"
  MUU_existential_war:0 "An Existential War"
  MUU_develop_poor1:0 "Developing the Poor Districts"
- MUU_land_reclamation1:0 "Draining the Marshes"
+ MUU_land_reclamation1:0 "Drainage Projects"
  MUU_reform_religion1:0 "Reforming the Old Religion"
  MUU_persecute_religion1:0 "Persecuting Religious Leaders"
  MUU_fascist_conscription1:0 "Compulsory Military Service"
@@ -281,3 +281,26 @@
  MUU_inirliq_airfield1:0 "Inirliq Research Airbase"
  MUU_inirliq_airfield2:0 "Inirliq Research Airbase"
  MUU_building_inirliq:0 "Construction in Inirliq"
+ 
+ 
+ ###decisions
+ MUU_drainage:0 "Marsh Drainage Projects"
+ drain_labn:0 "Drain Labn"
+ drain_zochtli:0 "Drain Zochtli"
+ drain_vatpagchi:0 "Drain Vatpagchi Saeli"
+ drain_asetale:0 "Drain Asetale"
+ drain_virqq:0 "Drain Virqq"
+ drain_neji:0 "Drain Neji"
+ drain_qtir:0 "Drain Q'tir"
+ drain_qnaa:0 "Drain Qna'a"
+ 
+ develop_xd_aluminium_plants:0 "Develop Aluminium Refineries in Vatpagchi"
+ develop_dustartajare_aluminium_deposits:0 "Develop Bauxite Deposits in Dustartajare"
+ develop_atulsan_aluminium_deposits:0 "Develop Bauxite Deposits in Atulsan"
+ develop_atulsan_tungsten_deposits:0 "Develop Tungsten Deposits in Atulsan"
+ develop_tollang_iron_deposits:0 "Develop Iron Deposits in Tollang"
+ develop_teqsitlti_iron_deposits:0 "Develop Iron Deposits in Teqsitlti"
+ develop_mirida_iron_deposits:0 "Develop Iron Deposits in Mirida"
+ develop_qtir_industrial_district:0 "Develop the Industrial District of Q'tir"
+ develop_qtir_steel_refineries:0 "Develop the Steel Refineries of Q'tir"
+ further_develop_qtir_refineries:0 "Further Develop the Refineries of Q'tir"
