some word stuff. writing

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -27,3 +27,41 @@
  FSM_supress_manu_nationalism_desc:1 "Many of the representatives in the Manu Autonomous State have proven uncooperative. We should use our powers to remove these figures from the government, and replace them with less radical representatives."
  FSM_more_research:1 "Institutionalized Research"
  FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
+
+
+
+
+
+
+ fsm.1.t:0 "Liberale Koalition Wins Elections"
+ fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
+ fsm.1.a:0 "To a new course for the Freistaaten!!"
+ fsm.2.t:0 "Selbstverwaltung Partei Wins Elections"
+ fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
+ fsm.2.a:0 "To another properous term!"
+ fsm.3.t:0 "DMS-GdEA Merger Announced"
+ fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the germanocentric Deutschemu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
+ fsm.3.a:0 "Strength comes in numbers and cooperation."
+
+ fsm.4.t:0 "FSM Requests Immediate Execution of Integration"
+ fsm.4.d:0 "Since 1918, the FSM has held us under its sphere. The ruthless opportunists and backhand paperpushers they are, from that very day they seeked to draw us closer into their union. Plans were drafted, and a date was set for 1935. The NSSAP had played stall tactics, wrestling power out of the FSM temporary administration, and giving it back to the people. But it seems patience has run thin. After the recent purges in our government and replacement of key fascist politicians, they have issued a demand to push through the annexation immediately, and admit Manu as a full Staat of the FSM"  
+ fsm.4.a:0 "We can't resist anymore."
+ fsm.4.b:0 "Never shall Saxonia Austral stand under any flag but our own!"
+
+ fsm.5.t:0 "Manu Accepts Integration"
+ fsm.5.d:0 "It seems our recent ingerences have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
+ fsm.5.a:0 "A toast to the new compatriots!"
+ 
+ fsm.6.t:0 "FSM Seeks Alliance"
+ fsm.6.d:0 "News of return of the Kaiser we're met with widespread celebration in the souther Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associate State, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM under its own libery, they seek to ally with us once more."
+ fsm.6.a:0 "We welcome them with open hands."
+ fsm.6.b:0 "We don't need another burden on our back."
+
+ fsm.7.t:0 "Fascists Win Snap Elections"
+ fsm.7.d:0 "In a turn of events that suprised absolutely no one, the ZNSP has won the snap elections. Organized because of increasing pressure from fascist supporters, the vote shows that the people unanimously want a stronger state. The successes of Hitler back in the Fatherland inspired many politicians to take up facism. Now, they hope to lead this nation to newfound glory, and show Mu how powerful the German race can be."
+ fsm.7.a:0 "Die Deutschen Über Alles!"
+
+ fsm.8.t:0 "[FSM.GetName] Proposes Alliance"
+ fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nations strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
+ fsm.8.a:0 "No german left behind!"
+ fsm.8.b:0 "They are cowards and a liability."
