--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -19,15 +19,92 @@
  FSM_companies_kohn_civilian:0 "Colonial Companies"
  FSM_companies_kohn_civilian_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
  FSM_maywerken:0 "Maywerken" 
- FSM_veto_native_rights_bill:1 "Veto Landowners' Suffarage Amendment"
+ FSM_veto_native_rights_bill:1 "Veto Landowners' Suffrage Amendment"
  FSM_veto_native_rights_bill_desc:1 "The law ensures that the people in charge of the economic policies are the ones making the money"
- FSM_pass_native_rights_bill:1 "Pass Landowners' Suffarage Amendment"
- FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffarage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
- FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
- FSM_supress_manu_nationalism_desc:1 "Many of the representatives in the Manu Autonomous State have proven uncooperative. We should use our powers to remove these figures from the government, and replace them with less radical representatives."
+ FSM_pass_native_rights_bill:1 "Pass Landowners' Suffrage Amendment"
+ FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffrage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
  FSM_more_research:1 "Institutionalized Research"
  FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
-
+ FSM_unite_germans:0 "Unite the Mu-Deutsche"
+ FSM_unite_germans_desc:0 "History has proven that national unity based on cultural similarities like language and religion is the only way to survive in this world. We must bring together all of the Mu-Deutsche under one banner."
+ FSM_schoenesland_1:0 "Invite Manu"
+ FSM_schoenesland_1_desc: "We have had our previousd disagreements with Manu before, but our common history and our common struggles declare that we should be one!"
+ FSM_schoenesland_2:0 "Invite Schoenesland"
+ FSM_schoenesland_2_desc: "Our German brethren in Schoenesland should welcome the opportunity to be part of the growing Mu-Deutsche Bloc."
+ FSM_vogelinsel_1:0 "Invite Vogelinsel"
+ FSM_vogelinsel_1_desc:0 "In the past Vogelinsel did not wish to be united with us under one banner. Now that the cowardly Allies have shown clearly through the Treaty of Versailles that they cannot be trusted to treat any German with dignity perhaps Vogelinsel will join us now."
+ FSM_vogelinsel_2:0 "The Nybornholm Question"
+ FSM_vogelinsel_2_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
+ FSM_challenge_austral_sea:0 "Austral Ocean Dominance"
+ FSM_challenge_austral_sea_desc:0 "Many times in history nations have tried to claim bodies of water as their own. Most have not succeeded. But our dominance of the Austral Ocean is assured!"
+ FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
+ FSM_supress_manu_nationalism_desc:1 "The 1920 treaty of Brunpfadstad, that ended the brief British protectorate in Southern Mu, agreed that Saxonia Austral be reorganized as the Manu Autonomous State and put under FSM administration. Manu was slated to be admitted as a full state of the FSM by 1935; unfortunately, many fascist sympathizers in their government have resisted progress in integration of the state. The only way we can move forward is by weeding out these obstructionists."
+ FSM_rebuild_the_dockyards:1 "Rebuild the Dockyards"
+ FSM_rebuild_the_dockyards_desc:1 "The heaviest toll in the Great War was taken by our southern ports. Housing a majority of our civilian and military dockyards, Blauswasser was a hub of trade and naval power for the growing FSM. Ruthless coastal bombardment and the occupation of the city by Entente forces left this industry in ruins. If we hope to revitalize the nation, it is best to start here."
+ FSM_ripples_of_shanghai:1 "Ripples of Shanghai"
+ FSM_ripples_of_shanghai_desc:1 "7 years ago, sparked by the sinking of its crown vessel in the ports of Shanghai, the economic bubble of the German South Mu Company popped, with catastrophic consequences. Once a major holder of all trade in and out of Mu, the company is now a husk of its former shelf, and the economic influence it gave us is slipping out of our hands."
+ FSM_kohn_gambit:1 "Kohn Gambit"
+ FSM_kohn_gambit_desc:1 "Thomas Kohn is a steadfast owner of the Kohn Produktionsfirma, the biggest individual exporter of goods in the nation. His investments in the GSMC helped sustain it, and even today he remains a staunch supporter of it. Perhaps, handing the company’s control over to a single more experienced entrepreneur like him will help revitalize it, and tie its exports directly with it."
+ FSM_germans_over_all:1 "Germans Over All"
+ FSM_germans_over_all_desc:1 "The Germanic race has no other it compares to. Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
+ FSM_open_stocks:1 "Open Stocks"
+ FSM_open_stocks_desc:1 "The GSMC's recession has can be largely attributed to our failures to keep up with the times. We can help revitalize the company by better spreading out leadership, and encouraging more investment in its stocks. Although the company would become heavily decentralized, it would promote investment, as well as gain us more stability should some investors choose to retract like they have before."
+ FSM_annex_manu:1 "Integrate Manu"
+ FSM_annex_manu_desc:1 "The integration of the Manu Autonomous State has been delayed far too long. Reluctant far-right administration as well as disagreement over the future of the nation have been a thorn in the FSM's side, hurting our politics and economy for the past decade. It's time to put down our foot and stomp out these fascist once and for all."
+ FSM_kaiser_is_back:1 "The Kaiser is Back"
+ FSM_kaiser_is_back_desc:1 "With the illegitimate regime gone, the Kaiser has taken his rightful place on the throne of Germany! Now that the fatherland is no longer under the iron hand of the fascists, perhaps our ties can grow stronger again."
+ FSM_status_quo:1 "Status Quo"
+ FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
+ FSM_revoke_sanction:1 "Revoke The Sanctions"
+ FSM_revoke_sanction_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
+ FSM_reinstate_the_associate_state:1 "Restore the Associate State"
+ FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
+ FSM_encourage_fascists:1 "Encourage Fascism"
+ FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
+ FSM_snap_elections:1 "Snap Elections"
+ FSM_snap_elections_desc:1 "The support for the ZNSP has reached a critical high. The people's demands have been made clear. We should organize a snap election to hear the populace out; lest we risk a revolt."
+ FSM_claims_on_tiquea:1 "Claims on Tiquea"
+ FSM_claims_on_tiquea_desc:1 "Such barbarism! The Tiqueans don't know how to run their country, nor how to treat the natives that infest their lands. We must not only guide them, but force them, to act properly. "
+ FSM_brotherhood:1 "Brotherhood"
+ FSM_brotherhood_desc:1 "The brotherhood of the Mu-Deutsche peoples is undeniable. We come from the same blood and thus we obviously belong together!"
+ FSM_sieze_fjinland:1 "Seize Fjinland"
+ FSM_sieze_fjinland_desc:1 "It has become increasingly clear the Dutch are incapable of administering their colonies. We would be doing them a favour by taking nearby Fjinland off their hands."
+ FSM_ban_japanese_immigration:1 "Ban Japanese Immigration"
+ FSM_ban_japanese_immigration_desc:1 "Why should any non-German, let alone one from Japan, "
+ FSM_join_allies:1 "Join Allies"
+ FSM_join_allies_desc:1 "Only a blind fool would stand on the wrong side of history! As the world is taken by storm with radical ideologies, the Allies represent a promise of democratic freedom and stability. Joining them would protect us, and help us fight for a more liberal world!"
+ FSM_nationalize_plantations:1 "Nationalize Plantations"
+ FSM_nationalize_plantations_desc:1 "Too many privately owned plantations in this nation exploit their workers, then stash the profits in vast family vaults, only growing richer. The money of the hardworking Freistaater should help develop the nation! By forcing some of these plantations to pay more taxes and lend land to the government, we can mitigate this inequality."
+ FSM_request_new_guinea:1 "Request Papua and New Guinea"
+ FSM_request_new_guinea_desc:1 "After the Great War, the German Colony of Papua and New Guinea made its way into the hands of the Australian’s. As part of rightful German territory, we have the right to demand it back immediately. The colony could be a potential key asset in the Austral Sea, a first line of defense against both America and the Japanese."
+ FSM_subsidize_colonial_companies:1 "Subsidize Colonial Companies"
+ FSM_subsidize_colonial_companies_desc:1 "The German companies are becoming a significant player as we industrialize. The government should strive to support it’s nation’s big businesses."
+ FSM_join_axis:1 "Join The Axis"
+ FSM_join_axis_desc:1 "Despite being scattered all over the world, the German people will achieve victory through cooperation. It is our obligation to join the Third Reich’s cause, and help them both at home and abroad."
+ FSM_antarctic_expedition:1 "Antarctic Expedition"
+ FSM_antarctic_expedition_desc:1 "The southern continent has remained elusive. Cold conditions, relentless snowstorms, and lack of civilization means that no one has attempted to reach the south pole again since 1911. If we can claim the silver medal for this accomplishment with an even bolder expedition, we can be sure to receive admiration among the scientific community."
+ FSM_centralize:1 "Centralize"
+ FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
+ FSM_american_union:1 "A More American Union"
+ FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
+ FSM_recognize_dutch:1 "Recognize Dutch"
+ FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
+ FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
+ FSM_admit_gdea_desc:1 "The Gesellschaft see Einheimischen Arbeiter has in recent years risen to prominance as a major political player. Pushing for native rights and a more socialist system, they have been a nuisance, but made strides in accomplishing their goal. Perhaps it’s time to face the music, and let the Native communists pursue their mission as an official political party."
+ FSM_negotiate_sanctions:1 "Negotiate The Sanctions"
+ FSM_negotiate_sanctions_desc:1 "Nearly 20 years have passed since the end of the Great War, and the FSM has been a model nation. Despite the hard hit we took, we have continued to grow, and we have been on good terms with the British and French. We are in a good position to request renegotiation of the steep sanctions placed on us."
+ FSM_claims_on_antarctica:1 "Claims On Antarctica"
+ FSM_claims_on_antarctica_desc:1 "We have boldly gone where men weaker men have feared to go! The southern continent may be devoid of resources, but it is land nonetheless, to which we have a rightful claim! No reaches of the world are too dangerous for a Freistaater!"
+ FSM_communist_hunt:1 "Hunt Down The Communists"
+ FSM_communist_hunt_desc:1 "The claws of socialism have reached us too, and tug on our curtails like a demented monster. Deranged exiles from the homeland conspire with the rowdy and dangerous natives to bring the shadows of revolution to Mu. As long as they stand, we cannot rest easy. No home will go unchecked anymore."
+ FSM_maywerken:1 "Maywerken"
+ FSM_maywerken_desc:1 "The industry of the FSM is well oiled machine. The experiences of Europe has taught us that transportation and communication are key factors in the smoothness of production. The Maywerken will be a major undertaking: a nationwide board of over 30 companies from different industries, subsidized by the government, and convened with the purpose of simplifying deals, constructing new railways and roads, and overwatching the production of goods all the way from raw material to the port."
+ FSM_allied_research_bonus:1 "Joint Research"
+ FSM_allied_research_bonus_desc:1 "Our good relations with the nations of the commonwealth could perhaps give us access to some of the top minds of the scientific and engineering community."
+ FSM_military_companies:1 "Military Companies"
+ FSM_military_companies_desc:1 "We can no longer ignore the looming threat of global war. Just as all the other great powers have, we must shift our economy to producing military gear. Only well armed can we survive the oncoming storm, and make a name for ourselves in history."
+ FSM_civilian_companies:1 "Civilian Companies"
+ FSM_civilian_companies_desc:1 "Our economy has always enjoyed the greatest boons from exporting raw materials and food products. The war is far away from us, so while the great powers clash, our economy can prosper on civilian goods." 
 
 
 
